--- a/app.yaml
+++ b/app.yaml
@@ -4,7 +4,15 @@ entrypoint: gunicorn -b :$PORT app:app
 instance_class: F2  # optional, adjust if needed
 
 env_variables:
-  GEMINI_API_KEY: "YOUR_GEMINI_API_KEY"
+  YOUTUBE_API_KEY: "AIzaSyAWAtYTjL7BUEN19R8n47Abr9G4u37Q70A"
+  FIREBASE_API_KEY: "AIzaSyCnowHleZxXSH3bK34Bb1ZOgUNe5T28Gsg"
+  FIREBASE_AUTH_DOMAIN: "mdvita-229be.firebaseapp.com"
+  FIREBASE_PROJECT_ID: "mdvita-229be"
+  FIREBASE_STORAGE_BUCKET: "mdvita-229be.firebasestorage.app"
+  FIREBASE_MESSAGING_SENDER_ID: "417004792942"
+  FIREBASE_APP_ID: "1:417004792942:web:fe89b380020f15318fca7f"
+  FIREBASE_MEASUREMENT_ID: "NT5P07MJHX"
+  GEMINI_API_KEY: "AIzaSyBTlAvTbZRJnPr22S0u8dq9JRhrRv8xqQ0"
 
 handlers:
   - url: /static
